Функционал Remember Me и тесты
